:bug: Fix sidebar overflow bug and tweak styles + Fixed sidebar overflowing bug with long names + Upgraded to using flexbox + Added endpoint id after method:url

--- a/template/src/styles/mixins.styl
+++ b/template/src/styles/mixins.styl
@@ -2,3 +2,11 @@ appearance(value)
   -webkit-appearance value
   -moz-appearance value
   appearance value
+
+mobile()
+  @media (max-width: 767px)
+    {block}
+
+desktop()
+  @media (min-width: 768px)
+    {block}
