--- a/template/src/styles/sidebar.styl
+++ b/template/src/styles/sidebar.styl
@@ -1,7 +1,7 @@
 aside.overview
   background lightBg
-  border-right 1px solid alpha(primary, 0.05)
-  border-bottom 1px solid alpha(primary, 0.05)
+  border-right 1px solid borderCol
+  border-bottom 1px solid borderCol
   h2
     text-align center
   .group
