--- a/template/src/styles/version.styl
+++ b/template/src/styles/version.styl
@@ -24,6 +24,12 @@ main
           margin 0em -titleSize 0em 0
           padding 0em titleSize
         
+        &:after
+          content: ''
+          clear: both
+          display: table
+          
+        
         .method
           border 1px solid transparent
           border-radius titleSize 0em 0 titleSize
@@ -57,6 +63,14 @@ main
           padding-right 2 * titleSize
           border-left none
         
+        .id
+          margin-left: 0.5em
+          font-weight: lighter
+          font-style: italic
+          user-select: all
+          border-bottom: 2px dashed #ccc
+          cursor: copy
+        
         .name
           float right
           font-size 1.2em
@@ -86,7 +100,7 @@ main
           color #999
           &:focus
             outline none
-            text-decoration underline;
+            text-decoration underline
           &.active
             color black
             font-style normal
